[package]
name = "char-freq"
version = "0.1.0"
authors = ["Caspar Krieger <git@asparck.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fern = { version = "0.6.0", features = ["colored"] }
log = "0.4.8"
chrono = "0.4.11"
regex = "1.3.7"
ignore = "0.4.15"

[build-dependencies]
embed-resource = "1.3.1"
